...

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Enter Title" />
...

            <TextView
                android:id="@+id/textViewCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/editTextCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/editTextState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewCostOfLiving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/editTextCostOfLiving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewYearlySalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/editTextYearlySalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewYearlyBonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/editTextYearlyBonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewTrainingFund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/editTextTrainingFund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewLeaveTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/editTextLeaveTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewTeleworkDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/editTextTeleworkDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
        <!-- Add a button at the end of the LinearLayout -->
        <Button
            android:id="@+id/save_and_return_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save and Return" />
        <Button
            android:id="@+id/save_and_create_another_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save and Create Another One" />
        <Button
            android:id="@+id/compare_with_cur_job_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save and Compare With Current Job" />
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
