...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Title"
                        android:padding="8dp"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/job1Title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/job2Title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp"/>
                </TableRow>
...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Company"
                        android:padding="8dp"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/job1Company"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/job2Company"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp"/>
                </TableRow>
...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Location"
                        android:padding="8dp"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/job1Location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/job2Location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp"/>
                </TableRow>
...
                        android:layout_weight="1"
                        android:text="Yearly Salary (Adjusted)"
                        android:padding="8dp"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/job1YearlySalary"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/job2YearlySalary"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp" />
                </TableRow>
...
                        android:layout_weight="1"
                        android:text="Yearly Bonus (Adjusted)"
                        android:padding="8dp"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/job1YearlyBonus"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/job2YearlyBonus"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp" />
                </TableRow>
...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TDF"
                        android:padding="8dp"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/job1TDF"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/job2TDF"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp"/>
                </TableRow>
...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="LT"
                        android:padding="8dp"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/job1LT"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/job2LT"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp"/>
                </TableRow>
...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="RWT"
                        android:padding="8dp"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/job1RWT"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/job2RWT"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="8dp"
                        android:textSize="14sp"/>
                </TableRow>
...
