...

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/update_or_create_current_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update or Create Current Job" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/create_job_offer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Job Offer" />

        <Space
            android:layout_width="match_parent"
...
