...
                android:hint="Enter Telework Days per Week"
                android:inputType="number" />
        </LinearLayout>

        <!-- Add a button at the end of the LinearLayout -->
        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save" />

        <Button
            android:id="@+id/button_cancel"
...
